# zdiff

./: Cargo.toml  README.md  deny.toml
examples/: config.rs  similar.rs
src/: config.rs  main.rs
