[package]
name = "zdiff"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.0"
http-serde = "2.1.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.143"
serde_yaml = "0.9.33"
similar = { version = "2.7.0", features = ["bytes", "inline"] }
tokio = { version = "1.47.1", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
